@@ -447,6 +447,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Added support for image thumbnailing to prop=imageinfo
 * action={login,block,delete,move,protect,rollback,unblock,undelete} now must be POSTed
 * prop=imageinfo interface changed: iihistory replaced by iilimit, iistart and iiend parameters
+* Added amlang parameter to meta=allmessages
 
 === Languages updated in 1.12 ===
 
